[project]
name = "ComfyUI-LLM-text-processor"
description = "Run GGUF text and prompt processing workflows in ComfyUI with llama.cpp for Qwen3-VL, Qwen3.5, Qwen3.6, Gemma 4, gpt-oss, and other local LLMs."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/KingManiya/ComfyUI-LLM-text-processor"

[tool.comfy]
PublisherId = "kingmaniya"
DisplayName = "LLM Text Processor"
